feat: style system

--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "astro": "astro",
     "test:unit": "vitest",
     "dev:test": "astro dev --config astro.config.test.mjs",
-    "preview:test": "astro preview --config astro.config.test.mjs",
+    "preview:test": "astro preview --config astro.config.test.mjs --port 54321",
     "test:e2e": "npm --prefix packages/e2e test"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.6",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "jsdom": "^26.0.0",
     "vitest": "^3.0.0",
-    "jsdom": "^26.0.0"
+    "@tailwindcss/vite": "^4.1.18",
+    "react": "^18.0.0"
   }
 }
